# clips

./: .gitignore  CMakeLists.txt  build.bat  build.sh  readme.md  test.bat  test.sh
docs/: readme-zh.md
examples/: CMakeLists.txt  clips_error.cpp  clips_init.cpp  clips_nonested.cpp  clips_null.cpp  clips_root.cpp  clips_sub.cpp  clips_test.cpp  main.cpp
include/clips/: clips.hpp
src/: CMakeLists.txt  clips.cpp
test/: CMakeLists.txt  clips_cmd_test.cpp  clips_error_test.cpp  clips_flag_test.cpp  clips_init_test.cpp  clips_root_test.cpp  clips_utils_test.cpp  main.cpp
